@@ -58,6 +58,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2926613 [edit] Copy database shows errors when DB has foreign key
 
 3.2.6.0 (not yet released)
+- bug #2938492 [display] information_schema sorting order 
 
 3.2.5.0 (2010-01-10)
 - patch #2903400 [bookmarks] Status of bookmark table, 
